--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
   "name": "soundsketch",
   "version": "0.1.0",
-  "private": false,
-  "description": "SoundSketch — Next.js app for audio/score sketching",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "check": "next lint && tsc --noEmit",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
-  },
-  "keywords": ["nextjs", "trpc", "typescript", "audio", "sound"],
-  "author": "Liam Huang",
-  "license": "MIT",
-  "engines": {
-    "node": ">=18"
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^13.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@trpc/client": "^10.0.0",
-    "@trpc/server": "^10.0.0",
-    "@trpc/react-query": "^10.0.0",
-    "@trpc/next": "^10.0.0",
-    "zod": "^3.0.0",
-    "superjson": "^1.10.0"
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "@types/react": "^18.2.21",
-    "@types/node": "^20.4.2",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.0",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.6.0"
-  }
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.15",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  },
+  "packageManager": "npm@11.5.2"
 }
