Connect python API to frontend

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,22 +1,23 @@
 # Core API Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+fastapi
+uvicorn[standard]
+python-multipart
 
 # Audio Processing
-librosa==0.10.1
-soundfile==0.12.1
-pydub==0.25.1
+librosa
+soundfile
+pydub
+audioread  # Pure Python MP3 decoder (works without FFmpeg for some files)
 
 # Music Analysis and Conversion
-music21==9.1.0
-pretty_midi==0.2.10
-mido==1.3.0
+music21
+pretty_midi
+mido
 
 # Utilities
-numpy==1.24.3
-scipy==1.11.4
-python-dotenv==1.0.0
+numpy
+scipy
+python-dotenv
 
 # CORS support for web integration
-fastapi-cors==0.0.6
+fastapi-cors
